--- a/package.json
+++ b/package.json
@@ -19,11 +19,6 @@
   },
   "scripts": {
     "build": "yarn wsrun build --stages",
-    "clean": "rm -rf ./node_modules && rm -rf ./packages/*/node_modules",
-    "postinstall": "yarn build"
-  },
-  "engines": {
-    "node": "10.9"
+    "clean": "rm -rf ./node_modules && rm -rf ./packages/*/node_modules"
   }
-
 }
