--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "scripts": {
     "build": "yarn wsrun build --stages",
-    "clean": "rm -rf ./node_modules && rm -rf ./packages/*/node_modules"
+    "clean": "rm -rf ./node_modules && rm -rf ./packages/*/node_modules",
+    "postinstall": "yarn build"
   }
 }
