--- a/universal-login-relayer/package.json
+++ b/universal-login-relayer/package.json
@@ -26,7 +26,7 @@
     },
     "engines": {
       "node": "10.9",
-      "yarn": "1.9"
+      "yarn": "1.9`'"
     },
     "devDependencies": {
         "babel-cli": "^6.26.0",
