--- a/universal-login-relayer/package.json
+++ b/universal-login-relayer/package.json
@@ -22,7 +22,8 @@
         "ganache:start": "babel-node scripts/ganache.js",
         "ens:deploy": "babel-node scripts/deployENS.js",
         "clean": "rm -fr ./node_modules && rm -fr ./build",
-        "postinstall": "yarn build"
+        "postinstall": "yarn build",
+        "start": "node dist/index.js"
     },
     "engines": {
       "node": "10.9",
