--- a/universal-login-relayer/package.json
+++ b/universal-login-relayer/package.json
@@ -23,7 +23,7 @@
         "ens:deploy": "babel-node scripts/deployENS.js",
         "clean": "rm -fr ./node_modules && rm -fr ./build",
         "postinstall": "yarn build",
-        "start": "node dist/index.js"
+        "start": "node lib/relayer.js"
     },
     "engines": {
       "node": "10.9",
